--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta content="initial-scale=1, width=device-width" name="viewport" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="Synthetix V3 Oracle Manager" />
+    <link rel="icon" href="favicon.ico" />
     <title>Synthetix V3 Oracle Manager</title>
-  <link rel="icon" href="/favicon.ico"/></head>
+  </head>
   <body>
     <div id="app"></div>
     <script>
@@ -14,7 +15,7 @@
         const script = document.createElement('script');
         script.type = 'text/javascript';
         script.src =
-          window.localStorage.UNSAFE_IMPORT === 'true' ? '/main.js' : `/main.js?_=${Date.now()}`;
+          window.localStorage.UNSAFE_IMPORT === 'true' ? 'main.js' : `main.js?_=${Date.now()}`;
         document.body.appendChild(script);
       })();
     </script>
